# tokimo-app-media-inspector

./: Cargo.toml  README.md  tokimo-app.toml
.github/workflows/: ci.yml
scripts/: lefthook-rustfmt.sh
src/: app_server.rs  cli.rs  config.rs  main.rs  state.rs
src/bus_services/: image_cortex_jobs.rs  media_inspector_jobs.rs  mod.rs
src/db/: mod.rs
src/handlers/: analyze.rs  jobs.rs
src/queue/: media_inspector_process.rs  mod.rs
src/services/: clip.rs  face.rs  image_loader.rs  ocr.rs
tests/: export_bindings.rs
ui/: .pnpmfile.cjs  package.json  pnpm-lock.yaml
ui/src/: index.tsx
ui/src/api/: client.ts
ui/src/components/: AnalyzePanel.tsx  HealthStatus.tsx  ResultViewer.tsx  SettingsPanel.tsx
ui/src/i18n/: index.ts
