[package]
name        = "tokimo-app-image-cortex"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "图片分析中间件 — OCR / 人脸 / CLIP / GPS 逆地理编码"
repository  = "https://github.com/tokimo-lab/tokimo-app-image-cortex"

[lib]
name = "tokimo_app_image_cortex"
path = "src/lib.rs"

[[bin]]
name = "tokimo-app-image-cortex"
path = "src/main.rs"

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5322dc286809a5bb79953b512334b0a8a63e33f2" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5322dc286809a5bb79953b512334b0a8a63e33f2", features = ["axum"] }
tokimo-bus-auth     = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5322dc286809a5bb79953b512334b0a8a63e33f2", features = ["axum", "cli-db"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5322dc286809a5bb79953b512334b0a8a63e33f2" }

clap              = { version = "4", features = ["derive", "env"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
sea-orm            = { version = "2.0.0-rc.38", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json", "macros"] }
rust-embed         = { version = "8", features = ["debug-embed"] }
mime_guess         = "2"
anyhow             = "1"
axum = { version = "0.8", features = ["json"] }
ts-rs = { version = "12", features = ["serde-json-impl"] }

# ── Tokimo packages ──
tokimo-perception         = { git = "https://github.com/tokimo-lab/tokimo-perception.git", rev = "ae6d35c" }
tokimo-package-image      = { git = "https://github.com/tokimo-lab/tokimo-package-image.git", rev = "6def2c0" }
tokimo-package-ffmpeg     = { git = "https://github.com/tokimo-lab/tokimo-package-ffmpeg.git", rev = "b3bb5c8c" }
tokimo-package-client-api = { git = "https://github.com/tokimo-lab/tokimo-package-client-api.git", rev = "07283bb0" }

# ── External crates ──
reqwest      = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
kamadak-exif = "0.6"
urlencoding  = "2"
